[package]
name = "flicfun"
version = "0.1.0"
authors = ["Paul Watson <paul@pdwtech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flicbtn = "0.1.1"
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3.20"